# mostqi-challenge-server-backend

./: .gitignore  config.ini  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tasks.py
static/css/: output.css
static/img/: loading.webm
templates/: default.html  error.html  index.html  success.html  validation.html
