[project]
name = "mosqi-challenge-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
